--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -27,7 +27,8 @@ jobs:
         node-version: 12
     - name: Install Surge
       run: npm install -g surge
-    - name: Run surge ./ boot-camp2020.surge.sh --token ${{secret.SURGE_TOKEN}}    
+    - name: Run surge
+      run: Run surge ./ boot-camp2020.surge.sh --token ${{secrets.SURGE_TOKEN}}    
      
      
      
