--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install Surge
       run: npm install -g surge
     - name: Run surge
-      run: Run surge ./ boot-camp2020.surge.sh --token ${{secrets.SURGE_TOKEN}}    
+      run: Run surge ./ boot_camp2020.surge.sh --token ${{secrets.SURGE_TOKEN}}    
      
      
      
